--- a/articles/chaos-studio/TOC.yml
+++ b/articles/chaos-studio/TOC.yml
@@ -71,9 +71,9 @@
     - name: Límites de servicio
       href: chaos-studio-service-limits.md
     - name: Documentación de la API de REST
-      href: /rest/api/chaosstudio
+      href: 'https://docs.microsoft.com/rest/api/chaosstudio'
     - name: SDK de Python
-      href: /python/api/azure-mgmt-chaos/?view=azure-python-preview
+      href: 'https://docs.microsoft.com/python/api/azure-mgmt-chaos/?view=azure-python-preview'
 - name: Recursos
   items:
     - name: Azure Roadmap
