--- a/articles/mysql/index.yml
+++ b/articles/mysql/index.yml
@@ -8,12 +8,12 @@ metadata:
   ms.date: 09/10/2021
   ms.service: mysql
   ms.topic: landing-page
-  ms.openlocfilehash: 7dc67d91f41915c4f570639bb04fb9fb9cc1c579
-  ms.sourcegitcommit: 702df701fff4ec6cc39134aa607d023c766adec3
+  ms.openlocfilehash: 79331b7a1016c90bfa26f109f975571e99e07056
+  ms.sourcegitcommit: 05c8e50a5df87707b6c687c6d4a2133dc1af6583
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 11/03/2021
-  ms.locfileid: "131442186"
+  ms.lasthandoff: 11/16/2021
+  ms.locfileid: "132551071"
 landingContent:
 - title: Acerca de Azure Database for MySQL
   linkLists:
@@ -165,6 +165,8 @@ landingContent:
       url: tutorial-design-database-using-portal.md
     - text: Creación de una aplicación web con un servidor flexible en una red virtual
       url: flexible-server/tutorial-webapp-server-vnet.md
+    - text: Implementación de una aplicación de Spring Boot en AKS con un servidor flexible
+      url: flexible-server/tutorial-deploy-springboot-on-aks-vnet.md
     - text: Compilación de una aplicación web PHP (Laravel) con un servidor flexible
       url: flexible-server/tutorial-php-database-app.md
     - text: Compilación de una aplicación web PHP (Laravel) con un servidor único
