--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -124,6 +124,8 @@
                   href: data-box-troubleshoot-data-upload.md
                 - name: Problemas de almacenamiento de blobs en Data Box
                   href: data-box-troubleshoot-rest.md
+                - name: Problemas de sincronización de hora en Data Box
+                  href: data-box-troubleshoot-time-sync.md
     - name: Data Box Disk
       items:
         - name: Información general
