--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -129,6 +129,8 @@
               href: flexible-server/tutorial-deploy-wordpress-on-aks.md
             - name: Compilación de una aplicación PHP (Laravel) con una base de datos
               href: flexible-server/tutorial-php-database-app.md
+            - name: Implementación de una aplicación de Spring Boot de Java en AKS en una red virtual
+              href: flexible-server/tutorial-deploy-springboot-on-aks-vnet.md
             - name: Conexión con una aplicación web privada
               href: flexible-server/tutorial-webapp-server-vnet.md
             - name: Implementación de bases de datos
