--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -596,7 +596,7 @@
         - name: Publicación en la galería de aplicaciones de Azure AD
           href: v2-howto-app-gallery-listing.md
         - name: Publicación en el panel de vendedores de Office 365
-          href: /office/dev/store/use-the-seller-dashboard-to-submit-to-the-office-store
+          href: /office/dev/store/add-in-submission-guide
     - name: Trabajo con Visual Studio
       items:
         - name: Uso del servicio conectado Active Directory
@@ -687,7 +687,7 @@
     - name: Azure CLI
       href: /cli/azure/identity
     - name: Azure PowerShell
-      href: /powershell/module/az.managedserviceidentity
+      href: /powershell/module/az.managedserviceidentity/
     - name: "Tipos de aplicación y OAuth\_2.0"
       displayName: 'App types, OAuth'
       href: v2-app-types.md
@@ -745,7 +745,7 @@
     - name: Azure Roadmap
       href: 'https://azure.microsoft.com/roadmap/?category=security-identity'
     - name: Probar Iniciar sesión con Microsoft
-      href: 'https://azure.microsoft.com/develop/identity/signin/'
+      href: 'https://developer.microsoft.com/identity/add-sign-in-with-microsoft'
     - name: Identidades administradas de recursos de Azure
       href: ../managed-identities-azure-resources/overview.md
     - name: Ayuda
