--- a/articles/active-directory/verifiable-credentials/TOC.yml
+++ b/articles/active-directory/verifiable-credentials/TOC.yml
@@ -68,9 +68,9 @@
     - name: Grupo de trabajo del sector para todo el identificador descentralizado (DID)
       href: 'https://identity.foundation'
     - name: Documento técnico de DID de Microsoft
-      href: 'http://aka.ms/didwhitepaper'
+      href: 'https://aka.ms/didwhitepaper'
     - name: Introducción al marketing de DID
-      href: 'http://aka.ms/didexplained'
+      href: 'https://aka.ms/didexplained'
     - name: Blog de identidad descentralizada
       href: 'https://techcommunity.microsoft.com/t5/tag/decentralized%20identity/tg-p'
     - name: Introducción en vídeo a las identidades descentralizadas
