--- a/articles/advisor/toc.yml
+++ b/articles/advisor/toc.yml
@@ -70,7 +70,7 @@
     - name: Azure Roadmap
       href: 'https://azure.microsoft.com/roadmap/'
     - name: Precios
-      href: 'https://azure.microsoft.com/pricing/details/advisor'
+      href: 'https://azure.microsoft.com/pricing/details/advisor/'
     - name: Calculadora de precios
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Actualizaciones del servicio
@@ -82,4 +82,4 @@
     - name: Stack Overflow
       href: 'https://stackoverflow.com/search?q=azure+advisor'
     - name: Ejemplos de código
-      href: 'https://azure.microsoft.com/resources/samples/?service=advisor'
+      href: /samples/browse/?products=azure
