--- a/articles/cognitive-services/QnAMaker/toc.yml
+++ b/articles/cognitive-services/QnAMaker/toc.yml
@@ -80,6 +80,8 @@
     - name: Uso de la API precompilada para realizar consultas en texto
       href: How-to/using-prebuilt-api.md
       displayName: 'prebuilt, query, answer, text, prebuilt api, ingest, no storage, call, response'
+    - name: Conversaciones multiturno
+      href: how-to/multi-turn.md
     - name: Obtención de preguntas alternativas sugeridas a través del aprendizaje activo
       href: How-to/improve-knowledge-base.md
       displayName: 'active learning, suggestion, dialog prompt, train api, feedback loop, autolearn, auto-learn, user setting, service setting, services setting, accept, reject, filter by suggestion, filter active learning, clusterHead, totalAutoSuggestedCount, totalUserSuggestedCount, autoSuggestedCount, userSuggestedCount'
