--- a/articles/index.yml
+++ b/articles/index.yml
@@ -556,7 +556,7 @@ productDirectory:
       azureCategories:
         - databases
         - integration
-      url: healthcare-apis/fhir/index.yml
+      url: healthcare-apis/azure-api-for-fhir/index.yml
     - title: Azure Cache for Redis
       summary: Aplicaciones versátiles con acceso a datos de baja latencia y alto rendimiento
       imageSrc: 'https://static.docs.com/ui/media/product/azure/cache-redis.svg'
@@ -597,7 +597,7 @@ productDirectory:
         - hybrid
         - databases
       url: azure-sql/index.yml
-    - title: Azure SQL Database
+    - title: "Azure\_SQL\_Database"
       summary: SQL administrado e inteligente en la nube
       imageSrc: 'https://static.docs.com/ui/media/product/azure/sql-database.svg'
       azureCategories:
