--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -245,7 +245,7 @@
               displayName: 'scale server, reset password'
         - name: Reinicio del servidor
           items:
-            - name: Azure portal
+            - name: Portal de Azure
               href: howto-restart-server-portal.md
             - name: Azure CLI
               href: howto-restart-server-cli.md
@@ -253,7 +253,7 @@
               href: howto-restart-server-powershell.md
         - name: Reglas de firewall
           items:
-            - name: Azure portal
+            - name: Portal de Azure
               href: howto-manage-firewall-using-portal.md
               displayName: 'firewall, portal, rules'
             - name: CLI de Azure
@@ -308,7 +308,7 @@
           displayName: 'application development, TLS'
         - name: Configuración de parámetros del servidor
           items:
-            - name: Azure portal
+            - name: Portal de Azure
               href: howto-configure-server-parameters-using-portal.md
               displayName: 'application development, server parameters'
             - name: Azure CLI
@@ -319,7 +319,7 @@
               displayName: 'application development, server parameters'
         - name: Almacenamiento de crecimiento automático
           items:
-            - name: Azure portal
+            - name: Portal de Azure
               href: howto-auto-grow-storage-portal.md
               displayName: 'business continuity, scale , storage'
             - name: Azure CLI
@@ -330,7 +330,7 @@
               displayName: 'business continuity, scale , storage'
         - name: Registros de acceso
           items:
-            - name: Azure portal
+            - name: Portal de Azure
               href: howto-configure-server-logs-in-portal.md
               displayName: 'access logs, monitor'
             - name: Azure CLI
@@ -517,6 +517,8 @@
                   href: flexible-server/concepts-intelligent-tuning.md
         - name: Replicación
           href: flexible-server/concepts-logical.md
+        - name: Recomendaciones de Azure Advisor
+          href: flexible-server/concepts-azure-advisor-recommendations.md
     - name: Solucionar problemas
       items:
         - name: Solución de errores de la CLI
@@ -525,7 +527,7 @@
       items:
         - name: Administración de un servicio
           items:
-            - name: Azure portal
+            - name: Portal de Azure
               href: flexible-server/how-to-manage-server-portal.md
             - name: Azure CLI
               href: flexible-server/how-to-manage-server-cli.md
@@ -563,7 +565,7 @@
               href: flexible-server/how-to-connect-scram.md
         - name: Configuración de parámetros del servidor
           items:
-            - name: Azure portal
+            - name: Portal de Azure
               href: flexible-server/howto-configure-server-parameters-using-portal.md
               displayName: 'application development, server parameters'
             - name: CLI de Azure
@@ -581,7 +583,7 @@
               href: flexible-server/how-to-restart-server-cli.md
         - name: Restauración de un servidor
           items:
-            - name: Azure portal
+            - name: Portal de Azure
               href: flexible-server/how-to-restore-server-portal.md
             - name: CLI de Azure
               href: flexible-server/how-to-restore-server-cli.md
