--- a/bread/toc.yml
+++ b/bread/toc.yml
@@ -286,6 +286,9 @@
         - name: Administración
           tocHref: /azure/azure-resource-manager/management/
           topicHref: /azure/azure-resource-manager/management/
+        - name: Solucionar problemas
+          tocHref: /azure/azure-resource-manager/troubleshooting/
+          topicHref: /azure/azure-resource-manager/troubleshooting/
         - name: Aplicaciones administradas
           tocHref: /azure/azure-resource-manager/managed-applications/
           topicHref: /azure/azure-resource-manager/managed-applications/
